<resources>
    <string name="app_name">Enterprise Control</string>
    <string name="title_choose_enterprise">Controle de Empresas</string>
    <string name="choose_enterprise">Escolha uma empresa para iniciar</string>
    <string name="no_data">Sem dados</string>
    <string name="enter">Entrar</string>
    <string name="list_products">Produtos</string>
    <string name="enterprises">Empresas</string>
    <string name="type_here_your_search">Digite aqui sua busca</string>
    <string name="add">Adicionar</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="enterprise">Empresa</string>
    <string name="list_enterprises">Listar Empresas</string>
    <string name="change_enterprise">Trocar Empresa</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="save">Salvar</string>
    <string name="no_data_found">Nenhum dado encontrado.\nClique aqui para cadastrar.</string>
    <string name="select_a_enterprise">Selecione uma empresa</string>
    <string name="entering">Entrando...</string>
    <string name="enterprise_record">Cadastro da Empresa</string>
    <string name="fancy_name">Nome Fantasia</string>
    <string name="corporate_name">Razão Social</string>
    <string name="state_registration">Inscrição Estadual (IE)</string>
    <string name="cep">CEP</string>
    <string name="address">Endereço</string>
    <string name="city">Cidade</string>
    <string name="telephone">Telefone</string>
    <string name="fax">Fax</string>
    <string name="cnpj">CNPJ</string>
    <string name="neighborhood">Bairro</string>
    <string name="select_item_to_delete">Selecione um item para deletar</string>
    <string name="select_item_to_edit">Selecione um item para editar</string>
    <string name="deleted_success">Item deletado com sucesso</string>
    <string name="delete_enterprise">Apagar empresa</string>
    <string name="delete_product">Apagar produto</string>
    <string name="message_delete">Ao deletar este item não será possível recuperá-lo</string>
    <string name="pais">País</string>
    <string name="invalid_cnpj">CNPJ inválido</string>
    <string name="must_be_filled_up">deve ser preenchido</string>
    <string name="product_registration">Cadastro de Produto</string>
    <string name="product">Produto</string>
    <string name="product_description">Descrição do Produto</string>
    <string name="product_nickname">Apelido do Produto</string>
    <string name="product_group">Grupo do Produto</string>
    <string name="product_sub_group">Sub Grupo do Produto</string>
    <string name="situation">Situação</string>
    <string name="product_weight">Peso Líquido</string>
    <string name="final_classification">Classificação Final</string>
    <string name="bar_code">Código de Barras</string>
    <string name="collection">Coleção</string>
    <string name="error_getenterprise">Erro ao obter a empresa automaticamente</string>
    <string name="sort_by">Ordenar por</string>
    <string name="group_type">Tipo Grupo</string>
</resources>
