<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollbars="vertical"
        tools:context=".ProductActivity">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/product_registration"
            android:textColor="@color/colorGreen"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/produto_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descricao_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description"
            android:maxLength="50" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_group"
            android:textColorHint="@color/colorGray"
            app:boxBackgroundColor="@color/colorWhite"
            app:hintTextColor="@color/colorGray"
            app:endIconTint="@color/colorGray">

            <AutoCompleteTextView
                android:id="@+id/grupo_crud_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:textColor="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/situacao_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/situation"
            android:maxLength="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apelido_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_nickname"
            android:maxLength="30" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sub_grupo_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_sub_group"
            android:inputType="number" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/peso_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_weight"
            android:inputType="numberDecimal" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classificacao_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/final_classification"
            android:maxLength="10" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codigo_barras_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bar_code"
            android:maxLength="50" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/colecao_crud_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/collection"
            android:maxLength="100" />

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</ScrollView>