<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ChooseEnterpriseActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/title_choose_enterprise"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/choose_enterprise"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_data_choose_enterprise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/no_data_found"
        android:textAlignment="center"
        android:textColor="@color/colorOrange"
        android:textSize="20sp"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/listv_enterprises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:choiceMode="singleChoice" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="@color/colorBlueLightSoft"
        android:text="@string/enter"
        android:textColor="@color/colorWhite" />

</com.google.android.material.circularreveal.CircularRevealLinearLayout>