<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_listproduct"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:src="@drawable/icon_product" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/product_listproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGrayLight"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/product_group_listproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_group"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGrayLight"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/description_listproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGrayLight"
            android:textSize="15sp" />
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/type_listproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_type"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGrayLight"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nickname_listproduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/product_nickname"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGrayLight"
            android:textSize="15sp" />
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_selected_product"
        android:layout_width="0dp"
        android:layout_weight="0.1"
        android:layout_height="match_parent"
        android:clickable="false"
        app:buttonTint="@color/colorOrange"
        app:useMaterialThemeColors="false" />
</com.google.android.material.circularreveal.CircularRevealLinearLayout>

