<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListProductsActivity">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/txt_enterprise_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@color/colorGreen"
            android:gravity="center"
            android:text="@string/enterprise"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:textSize="19sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="0.4"
            android:hint="@string/sort_by"
            android:textColorHint="@color/colorWhite"
            app:boxBackgroundColor="@color/colorGreen"
            app:hintTextColor="@color/colorWhite"
            app:endIconTint="@color/colorWhite">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:textColor="@color/colorWhite" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_product"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/type_here_your_search"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_data_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/no_data"
        android:textAlignment="center"
        android:textColor="@color/colorOrange"
        android:textSize="22sp"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/listv_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite" />


</com.google.android.material.circularreveal.CircularRevealLinearLayout>